Implement lead follow-up feature and enhance lead management. Added LeadFollowup module, service, and controller for managing lead follow-ups. Updated LeadsService to create follow-up records upon lead status updates. Adjusted rate limit configuration and improved code formatting across various files.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "build": "npm run lint && npm run format && nest build",
+    "build": "npm run format && nest build",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\""
   },
