--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "build": "npm run format && nest build",
+    "build": "npm run format && nest build && npm run copy-env",
+    "copy-env": "cp .env.production dist/.env",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\""
   },
