--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "build": "npm run format && nest build && npm run copy-env",
-    "copy-env": "cp .env.production dist/.env",
+    "copy-env": "cp .env.production dist/.env && cp .env.production .env",
+    "start:prod": "NODE_ENV=production node dist/main.js",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\""
   },
