--- a/package.json
+++ b/package.json
@@ -13,20 +13,24 @@
     "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
+    "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "compression": "^1.8.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.5.0",
     "helmet": "^8.1.0",
     "mysql2": "^3.14.1",
-    "typeorm": "^0.3.22",
-    "typeorm-extension": "^3.7.1"
+    "nodemailer": "^7.0.3",
+    "typeorm": "^0.3.24",
+    "typeorm-extension": "^3.7.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
@@ -34,6 +38,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@types/compression": "^1.7.5",
     "@types/helmet": "^0.0.48",
+    "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
     "eslint": "^9.26.0",
