--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "copy-env": "cp .env.production dist/.env && cp .env.production .env",
     "start:prod": "NODE_ENV=production node dist/main.js",
     "lint": "eslint . --ext .ts",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"" ,
+      "typeorm": "typeorm",
+    "migration:generate": "npm run typeorm migration:generate -- -d src/ormconfig.ts",
+    "migration:run": "npm run typeorm migration:run -- -d src/ormconfig.ts",
+    "migration:revert": "npm run typeorm migration:revert -- -d src/ormconfig.ts"
+
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
@@ -43,18 +48,25 @@
     "@eslint/js": "^9.26.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.4.17",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
     "@types/helmet": "^0.0.48",
+    "@types/jest": "^29.5.14",
     "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.3.1",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.0"
   }
 }
